--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -3,44 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_m_ad"
+    
+    <WebView 
+        android:id="@+id/menu_wv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_weight="4.0"
-        android:background="#00000000"
-        android:flipInterval="30"
-        android:persistentDrawingCache="animation" />
-    
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#000000">
-        
-        <com.example.telphone.extendview.MarqueeButton
-            android:id="@+id/marquee_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dip"
-            android:ellipsize="marquee"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:gravity="center"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:textSize="26sp"
-            android:textColor="#ffff00"
-            android:text="亿讯通贺岁版隆重推出，敬请试用！"
-            android:background="#000000"
-            android:textStyle="bold" />
-
-        </RelativeLayout>
-        
-        
+        android:layout_weight="4">
+        </WebView>
+   
+               
         <GridView  
         	android:id="@+id/gv_m"  
         	android:layout_width="fill_parent"  
