--- a/res/layout/tel.xml
+++ b/res/layout/tel.xml
@@ -4,19 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
- <android.support.v4.view.ViewPager
-        android:id="@+id/vp_t_ad"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_weight="5"
-        android:background="#00000000"
-        android:flipInterval="30"
-        android:paddingLeft="1dp"
-        android:paddingTop="1dp"
-        android:paddingBottom="1dp"
-        android:paddingRight="1dp"
-        android:persistentDrawingCache="animation" />
+ 
+ <WebView 
+     android:id="@+id/wv_t_ad"
+     android:layout_width="match_parent"
+     android:layout_height="0dp"
+     android:layout_weight="5"/>
    <LinearLayout 
         android:id="@+id/ll_tel_numpad"
         android:layout_width="match_parent"
